[metadata]
author = Brent Barbachem
author_email = "barbacbd@dukes.jmu.edu"
maintainer = Brent Barbachem
maintainer_email = "barbacbd@dukes.jmu.edu"
name = nhl
version = 1.0.0
description = 'A package to pull NHL historical data, and create the objects to hold the data.'
long_description = file: README.md
long_description_content_type = 'text/markdown'
keywords = nhl, hockey
license = 'MIT'
license_files = file: LICENSE
classifiers =
    Programming Language :: Python :: 3
url = "https://github.com/barbacbd/nhl"

[options]
zip_safe = False
include_package_data = True
packages = find: 
install_requires =
    requests
tests_require =
    pytest
    coverage
    pytest-cov
python_requires = >=3.0, <4

[options.package_data]
* = *.yaml

[options.packages.find]
exclude =
    tests*
